Fix padding issue on mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ table, th, td {
 .login a, .links a, .logout a {
     display: block;
     width: 100%;
-    padding: 24px auto;
+    padding: 25% auto;
     border: 1px solid blue;
 }
 
